--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "gulp": "^4.0.2",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scroll": "^1.9.0",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.29",
