--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.2",
     "react-scroll": "^1.9.0",
     "scrollreveal": "^4.0.9"
   },
