--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,28 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@babel/register": "^7.23.7",
     "@phosphor-icons/react": "^2.0.15",
-    "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2",
+    "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
-    "scrollreveal": "^4.0.9"
+    "scrollreveal": "^4.0.9",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.29",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.71.0",
-    "vite": "^5.1.0"
+    "vite": "^5.1.5"
   }
 }
