--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "sass": "^1.71.1",
     "scrollreveal": "^4.0.9",
-    "sass": "^1.71.1"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.29",
