--- a/frontend/hosting/package.json
+++ b/frontend/hosting/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "hosting",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,21 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.0.15",
-    "firebase": "^10.9.0",
-    "gulp": "^4.0.2",
-    "jquery": "^3.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-scroll": "^1.9.0",
-    "react-slick": "^0.30.2",
-    "sass": "^1.71.1",
-    "scrollreveal": "^4.0.9",
-    "slick-carousel": "^1.8.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.29",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
@@ -32,7 +21,6 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "gulp-sass": "^5.1.0",
-    "vite": "^5.1.5"
+    "vite": "^5.1.6"
   }
 }
