--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
 PORT=3000
-MONGO_URI="mongodb+srv://mkocikdev:mike123321@portfoliocluster.udzco96.mongodb.net/?retryWrites=true&w=majority&appName=PortfolioCluster"
-VITE_SERVER_URL=https://portfolio-project-2-0-server.onrender.com
+MONGO_URI="mongodb+srv://mkocikdev:tqfCfRogymKom7hG@portfoliocluster.udzco96.mongodb.net/?retryWrites=true&w=majority&appName=PortfolioCluster"
