--- a/admin/.env
+++ b/admin/.env
@@ -1,1 +1,1 @@
-VITE_SERVER_URL=https://portfolio-project-2-0-server.onrender.com
+VITE_SERVER_URL=https://kdevportfolioserver-ffadfe1b69d7.herokuapp.com
