--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=3000
-MONGO_URI="mongodb+srv://mkocikdev:tqfCfRogymKom7hG@portfoliocluster.udzco96.mongodb.net/?retryWrites=true&w=majority&appName=PortfolioCluster"
+MONGO_URI="mongodb+srv://mkocikdev:x123mike321x@portfoliocluster.udzco96.mongodb.net/portfolio?retryWrites=true&w=majority&appName=PortfolioCluster"
+SERVER_URL=https://kdevportfolioserver-ffadfe1b69d7.herokuapp.com
