--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 PORT=3000
 MONGO_URI="mongodb+srv://mkocikdev:x123mike321x@portfoliocluster.udzco96.mongodb.net/portfolio?retryWrites=true&w=majority&appName=PortfolioCluster"
-SERVER_URL=https://kdevportfolioserver-ffadfe1b69d7.herokuapp.com
 
+SERVER_URL=http://localhost:4000
+https://kdevportfolioserver-ffadfe1b69d7.herokuapp.com
