--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_SERVER_URL=https://kdevportfolioserver-ffadfe1b69d7.herokuapp.com
+VITE_SERVER_URL=https://us-central1-portfolioproject-c30ae.cloudfunctions.net/api
